[project]
name = "attest-action"
version = "0.0.5"
description = "A GitHub Action that generates [PEP 740] publish attestations for your Python packages."
readme = "README.md"
dependencies = [
    "prettytable>=3.17.0",
    "pypi-attestations>=0.0.28",
    "sigstore>=4.1.0",
]
requires-python = ">=3.10"
classifiers = [
    # This is a GitHub Action, not a PyPI package.
    "Private :: Do Not Upload",
]

[dependency-groups]
dev = [
    "inline-snapshot>=0.31.1",
    "pyright>=1.1.408",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "ruff>=0.14.6",
]

